crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__sibling_dependencies__sibling_dependencies-solved.snap
---
source: crates/engine/query-solver/src/tests/sibling_dependencies.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"*Product.name\", color=forestgreen style=bold ]\n    2 [ label = \"FedEntity#inventory\", shape=parallelogram, color=royalblue style=dashed ]\n    3 [ label = \"FedEntity#products\", shape=parallelogram, color=royalblue style=dashed ]\n    4 [ label = \"Product.price\", color=forestgreen style=bold ]\n    0 -> 1 [ label = \"1\", color=forestgreen,fontcolor=forestgreen ]\n    2 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 2 [ label = \"11\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 3 [ label = \"11\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 1 [ label = \"2\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 4 [ label = \"1\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "*Product.name", steiner=1 ]
    2 [ label = "FedEntity#inventory", steiner=0 ]
    3 [ label = "FedEntity#products", steiner=0 ]
    4 [ label = "Product.price", steiner=1 ]
    0 -> 1 [ cost=1, steiner=1]
    2 -> 1 [ cost=0, steiner=0]
    0 -> 2 [ cost=11, steiner=0]
    3 -> 1 [ cost=0, steiner=0]
    0 -> 3 [ cost=11, steiner=0]
    0 -> 1 [ cost=2, steiner=0]
    3 -> 4 [ cost=0, steiner=0]
    0 -> 4 [ cost=1, steiner=1]
}
