crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__sibling_dependencies__sibling_dependencies-solver.snap
---
source: crates/engine/query-solver/src/tests/sibling_dependencies.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"User.id\", style=dashed ]\n    2 [ label = \"User.username\", style=dashed ]\n    3 [ label = \"Product.price\", style=dashed ]\n    4 [ label = \"Review.body\", style=dashed ]\n    5 [ label = \"User.id\", style=dashed ]\n    6 [ label = \"User.username\", style=dashed ]\n    7 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"me#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"id#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"username#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"cart#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"products#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    14 [ label = \"price#products\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"FedEntity#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    16 [ label = \"price#products\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"FedEntity#reviews\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    18 [ label = \"reviews#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label = \"author#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    20 [ label = \"id#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    21 [ label = \"FedEntity#accounts\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    22 [ label = \"username#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    23 [ label = \"body#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    24 [ label = \"*Product.upc\", style=dashed ]\n    25 [ label = \"upc#products\", shape=box, color=dodgerblue, style=dashed ]\n    26 [ label = \"*Product.name\", style=dashed ]\n    27 [ label = \"name#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    28 [ label = \"FedEntity#inventory\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    29 [ label = \"name#inventory\", shape=box, color=dodgerblue, style=dashed ]\n    30 [ label = \"name#products\", shape=box, color=dodgerblue, style=dashed ]\n    31 [ label = \"name#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    32 [ label=\"\", style=dashed]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = <<b>2</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 15 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 17 [ label = <<b>2</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 21 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    21 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    23 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    25 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    27 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 28 [ label = <<b>2</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    28 -> 29 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    29 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 30 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    30 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 31 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    31 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    32 -> 0 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "User.id", steiner=0 ]
    2 [ label = "User.username", steiner=0 ]
    3 [ label = "Product.price", steiner=0 ]
    4 [ label = "Review.body", steiner=0 ]
    5 [ label = "User.id", steiner=0 ]
    6 [ label = "User.username", steiner=0 ]
    7 [ label = "Root#accounts", steiner=0 ]
    8 [ label = "me#accounts", steiner=0 ]
    9 [ label = "id#accounts", steiner=0 ]
    10 [ label = "username#accounts", steiner=0 ]
    11 [ label = "cart#accounts", steiner=0 ]
    12 [ label = "products#accounts", steiner=0 ]
    13 [ label = "FedEntity#products", steiner=0 ]
    14 [ label = "price#products", steiner=0 ]
    15 [ label = "FedEntity#products", steiner=0 ]
    16 [ label = "price#products", steiner=0 ]
    17 [ label = "FedEntity#reviews", steiner=0 ]
    18 [ label = "reviews#reviews", steiner=0 ]
    19 [ label = "author#reviews", steiner=0 ]
    20 [ label = "id#reviews", steiner=0 ]
    21 [ label = "FedEntity#accounts", steiner=0 ]
    22 [ label = "username#accounts", steiner=0 ]
    23 [ label = "body#reviews", steiner=0 ]
    24 [ label = "*Product.upc", steiner=0 ]
    25 [ label = "upc#products", steiner=0 ]
    26 [ label = "*Product.name", steiner=0 ]
    27 [ label = "name#accounts", steiner=0 ]
    28 [ label = "FedEntity#inventory", steiner=0 ]
    29 [ label = "name#inventory", steiner=0 ]
    30 [ label = "name#products", steiner=0 ]
    31 [ label = "name#reviews", steiner=0 ]
    32 [ label="", style=dashed]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 1 [ cost=0, steiner=0]
    8 -> 10 [ cost=0, steiner=0]
    10 -> 2 [ cost=0, steiner=0]
    8 -> 11 [ cost=0, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 13 [ cost=2, steiner=0]
    13 -> 14 [ cost=0, steiner=0]
    14 -> 3 [ cost=0, steiner=0]
    12 -> 15 [ cost=1, steiner=0]
    15 -> 16 [ cost=0, steiner=0]
    16 -> 3 [ cost=0, steiner=0]
    12 -> 17 [ cost=2, steiner=0]
    17 -> 18 [ cost=0, steiner=0]
    18 -> 19 [ cost=0, steiner=0]
    19 -> 20 [ cost=0, steiner=0]
    20 -> 5 [ cost=0, steiner=0]
    19 -> 21 [ cost=1, steiner=0]
    21 -> 22 [ cost=0, steiner=0]
    22 -> 6 [ cost=0, steiner=0]
    18 -> 23 [ cost=0, steiner=0]
    23 -> 4 [ cost=0, steiner=0]
    15 -> 25 [ cost=0, steiner=0]
    25 -> 24 [ cost=0, steiner=0]
    12 -> 27 [ cost=0, steiner=0]
    27 -> 26 [ cost=0, steiner=0]
    12 -> 28 [ cost=2, steiner=0]
    28 -> 29 [ cost=0, steiner=0]
    29 -> 26 [ cost=0, steiner=0]
    13 -> 30 [ cost=0, steiner=0]
    30 -> 26 [ cost=0, steiner=0]
    17 -> 31 [ cost=0, steiner=0]
    31 -> 26 [ cost=0, steiner=0]
    32 -> 0 [ cost=0, steiner=1]
}
